src/test/deca/syntax/parser/valid/simple_readint.deca
// Parser test on readInt

{
    readInt();
}