src/test/deca/syntax/parser/invalid/class_no_name.deca
// Parser test, no name

class {

}
